--- a/Project-1-Simon/css/style.css
+++ b/Project-1-Simon/css/style.css
@@ -66,5 +66,5 @@ button {
   background-color: darkgreen;
 }
 .cell-yellow {
-  background-color: goldenrod;
+  background-color: rgb(175, 175, 2);
 }
