--- a/Project-1-Simon/css/style.css
+++ b/Project-1-Simon/css/style.css
@@ -32,6 +32,30 @@ body {
   top: 175px;
   left: 800px;
 }
+.highScoreContainer {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  /* align-items: flex-end; */
+  /* margin-left: 30px; */
+  /* padding-left: 50px; */
+  /* align-self: flex-start; */
+  position: absolute;
+  top: 175px;
+  left: 650px;
+}
+.fastestContainer {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  /* align-items: flex-end; */
+  /* margin-left: 30px; */
+  /* padding-left: 50px; */
+  /* align-self: flex-start; */
+  position: absolute;
+  top: 175px;
+  left: 500px;
+}
 .counter {
   font-size: 25px;
   text-align: right;
@@ -67,4 +91,78 @@ button {
 }
 .cell-yellow {
   background-color: #ffd11c;
+}
+
+/* on off switcht code from https://proto.io/freebies/onoff/ */
+.onoffswitch {
+  position: relative;
+  width: 90px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+.onoffswitch-checkbox {
+  position: absolute;
+  opacity: 0;
+  pointer-events: none;
+}
+.onoffswitch-label {
+  display: block;
+  overflow: hidden;
+  cursor: pointer;
+  border: 2px solid #999999;
+  border-radius: 20px;
+}
+.onoffswitch-inner {
+  display: block;
+  width: 200%;
+  margin-left: -100%;
+  transition: margin 0.3s ease-in 0s;
+}
+.onoffswitch-inner:before,
+.onoffswitch-inner:after {
+  display: block;
+  float: left;
+  width: 50%;
+  height: 30px;
+  padding: 0;
+  line-height: 30px;
+  font-size: 14px;
+  color: white;
+  font-family: Trebuchet, Arial, sans-serif;
+  font-weight: bold;
+  box-sizing: border-box;
+}
+.onoffswitch-inner:before {
+  content: "EASY";
+  padding-left: 10px;
+  background-color: #000203;
+  color: #ffffff;
+  text-align: left;
+}
+.onoffswitch-inner:after {
+  content: "HARD";
+  padding-right: 10px;
+  background-color: #eeeeee;
+  color: #999999;
+  text-align: right;
+}
+.onoffswitch-switch {
+  display: block;
+  width: 18px;
+  margin: 6px;
+  background: #ffffff;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 56px;
+  border: 2px solid #999999;
+  border-radius: 20px;
+  transition: all 0.3s ease-in 0s;
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
+  margin-left: 0;
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
+  right: 0px;
 }
