--- a/Project-1-Simon/css/style.css
+++ b/Project-1-Simon/css/style.css
@@ -1,101 +1,236 @@
 body {
-  font-family: "Ruluko", sans-serif;
+  /* font-family: "Ruluko", sans-serif;
   margin: 0px auto;
   text-align: center;
-  width: 700px;
-  font-size: 30px;
+  width: 600px;
+  font-size: 30px; */
   background-color: whitesmoke;
 }
-.board {
-  width: auto;
-  height: auto;
-  display: grid;
-  justify-content: center;
-  align-content: center;
-  grid-template-columns: repeat(2, auto);
-}
-.header {
-  display: flex;
-  justify-content: center;
-  /* padding-left: 50px; */
-  /* width: 800px; */
-}
-.counterContainer {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  /* align-items: flex-end; */
-  /* margin-left: 30px; */
-  /* padding-left: 50px; */
-  /* align-self: flex-start; */
-  position: absolute;
-  top: 175px;
-  left: 800px;
-}
-.highScoreContainer {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  /* align-items: flex-end; */
-  /* margin-left: 30px; */
-  /* padding-left: 50px; */
-  /* align-self: flex-start; */
-  position: absolute;
-  top: 175px;
-  left: 650px;
-}
-.fastestContainer {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  /* align-items: flex-end; */
-  /* margin-left: 30px; */
-  /* padding-left: 50px; */
-  /* align-self: flex-start; */
-  position: absolute;
-  top: 175px;
-  left: 500px;
-}
-.counter {
-  font-size: 25px;
-  text-align: right;
-  margin-bottom: 10px;
-}
-.value {
-  font-size: 20px;
-  text-align: center;
-  padding: 0px, 50px;
-}
-.cell {
-  width: 200px;
-  height: 200px;
-  border: 3px solid black;
-  border-radius: 20px;
-  margin: 20px;
-}
-#reset {
-  margin: 30px;
-}
-button {
-  margin: 30px;
-  font-size: 20px;
+#outerCircle {
+  background: #385a94;
+  border-radius: 50%;
+  height: 600px;
+  width: 600px;
+  position: relative;
+  border-style: solid;
+  border-width: 10px;
+  margin: auto;
+  margin-top: 60px;
+  box-shadow: 8px 8px 15px 5px #888888;
 }
 .cell-red {
   background-color: darkred;
+  position: absolute;
+  height: 300px;
+  width: 300px;
+  border-radius: 300px 0 0 0;
+  top: 50%;
+  left: 50%;
+  margin: -300px 0px 0px -300px;
+  border-style: solid;
+  border-width: 5px;
+  box-sizing: border-box;
+  box-shadow: inset 0px 0px 5px 5px rgba(36, 35, 35, 0.5);
 }
 .cell-blue {
+  position: absolute;
+  height: 300px;
+  width: 300px;
+  border-radius: 0 300px 0 0;
   background-color: darkblue;
+  top: 50%;
+  left: 50%;
+  margin: -300px 0px 0px 0px;
+  border-style: solid;
+  border-width: 5px;
+  box-sizing: border-box;
+  box-shadow: inset 0px 0px 5px 5px rgba(36, 35, 35, 0.5);
 }
 .cell-green {
+  position: absolute;
+  height: 300px;
+  width: 300px;
+  border-radius: 0 0 300px 0;
   background-color: darkgreen;
+  top: 50%;
+  left: 50%;
+  margin: 0px 0px -300px 0px;
+  border-style: solid;
+  border-width: 5px;
+  box-sizing: border-box;
+  box-shadow: inset 0px 0px 5px 5px rgba(36, 35, 35, 0.5);
 }
 .cell-yellow {
+  position: absolute;
+  height: 300px;
+  width: 300px;
+  border-radius: 0 0 0 300px;
   background-color: #ffd11c;
+  top: 50%;
+  left: 50%;
+  margin: 0px -300px 0px -300px;
+  border-style: solid;
+  border-width: 5px;
+  box-sizing: border-box;
+  box-shadow: inset 0px 0px 10px 7px rgba(36, 35, 35, 0.5);
+}
+#innerCircle {
+  position: absolute;
+  background-color: grey;
+  height: 300px;
+  width: 300px;
+  border-radius: 50%;
+  top: 50%;
+  left: 50%;
+  margin: -150px 0px 0px -150px;
+  border-style: solid;
+  border-width: 10px;
+  box-sizing: border-box;
+  box-shadow: inset 0px 0px 5px 5px rgba(36, 35, 35, 0.5);
+}
+#title {
+  font-family: "Candal", sans-serif;
+  position: absolute;
+  font-size: 55px;
+  margin-left: 42px;
+  margin-top: 34px;
+}
+/* .button {
+  border-radius: 50% !important;
+  font-size: 1.5em;
+  background-color: lightgray; */
+
+#startGameBtn {
+  position: absolute;
+  border: solid 3px black;
+  border-radius: 50%;
+  height: 20%;
+  width: 20%;
+  margin: 120px 0px 0px 112px;
+  background: red;
+  font-size: 20px;
+  line-height: 17px;
+  text-align: center;
+}
+#countBox {
+  position: absolute;
+  margin: 120px 0px 0px 35px;
+  /* vertical-align: top;
+  display: inline-block; */
+  height: 50px;
+  width: 50.3px;
+}
+#highLevelBox {
+  position: absolute;
+  margin: 120px 0px 0px 200px;
+  /* vertical-align: top;
+  display: inline-block; */
+  height: 50px;
+  width: 50.3px;
+}
+#countDisplay {
+  border: solid 3px black;
+  border-radius: 20%;
+  height: 50%;
+  margin: 0px 6px 0px 6px;
+  background: red;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
+}
+#countText {
+  height: 30%;
+  margin: 4px 6px 0px 6px;
+  font-size: 15px;
+  color: black;
+  font-weight: bold;
+  text-align: center;
+}
+#displayText {
+  opacity: 0.3;
+}
+/* on off switcht code from https://proto.io/freebies/onoff/ */
+.difficultyswitch {
+  position: absolute;
+  margin: 195px 0px 0px 150px;
+  width: 90px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+.difficultyswitch-checkbox {
+  position: absolute;
+  opacity: 0;
+  pointer-events: none;
+}
+.difficultyswitch-label {
+  display: block;
+  overflow: hidden;
+  cursor: pointer;
+  border: 2px solid #999999;
+  border-radius: 20px;
+}
+.difficultyswitch-inner {
+  display: block;
+  width: 200%;
+  margin-left: -100%;
+  transition: margin 0.3s ease-in 0s;
+}
+.difficultyswitch-inner:before,
+.difficultyswitch-inner:after {
+  display: block;
+  float: left;
+  width: 50%;
+  height: 30px;
+  padding: 0;
+  line-height: 30px;
+  font-size: 14px;
+  color: white;
+  font-family: Trebuchet, Arial, sans-serif;
+  font-weight: bold;
+  box-sizing: border-box;
+}
+.difficultyswitch-inner:before {
+  content: "EASY";
+  padding-left: 10px;
+  background-color: #606161;
+  color: #ffffff;
+  text-align: left;
+}
+.difficultyswitch-inner:after {
+  content: "HARD";
+  padding-right: 10px;
+  background-color: #eeeeee;
+  color: #999999;
+  text-align: right;
+}
+.difficultyswitch-switch {
+  display: block;
+  width: 18px;
+  margin: 6px;
+  background: #ffffff;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 56px;
+  border: 2px solid #999999;
+  border-radius: 20px;
+  transition: all 0.3s ease-in 0s;
+}
+.difficultyswitch-checkbox:checked
+  + .difficultyswitch-label
+  .difficultyswitch-inner {
+  margin-left: 0;
+}
+.difficultyswitch-checkbox:checked
+  + .difficultyswitch-label
+  .difficultyswitch-switch {
+  right: 0px;
 }
 
-/* on off switcht code from https://proto.io/freebies/onoff/ */
 .onoffswitch {
-  position: relative;
+  position: absolute;
+  margin: 195px 0px 0px 30px;
   width: 90px;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -134,14 +269,14 @@ button {
   box-sizing: border-box;
 }
 .onoffswitch-inner:before {
-  content: "EASY";
+  content: "ON";
   padding-left: 10px;
-  background-color: #000203;
+  background-color: #606161;
   color: #ffffff;
   text-align: left;
 }
 .onoffswitch-inner:after {
-  content: "HARD";
+  content: "OFF";
   padding-right: 10px;
   background-color: #eeeeee;
   color: #999999;
