change start button color to be controlled by the power switch

--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ body {
   width: 30px;
   margin-top: 122px;
   margin-left: 121px;
-  background: red;
+  background: darkred;
 }
 #startButtonTxt {
   position: absolute;
